# tfhe_quiz

./: .env  Cargo.toml  diesel.toml
client/: package.json  pnpm-lock.yaml
client/app/: layout.tsx  page.tsx
client/app/(auth)/login/: page.tsx
client/app/(auth)/register/: page.tsx
client/app/(dashboard)/: layout.tsx
client/components/inputs/: password-input.tsx  text-input.tsx
client/components/sidebar/: sidebar.tsx
client/components/ui/: button.tsx
client/helpers/: quizSource.ts
client/hooks/: apiHooks.tsx
client/lib/: atom.ts
client/providers/: JotaiProviders.tsx
client/types/: form-types.ts
migrations/2024-08-10-230020_users/: up.sql
migrations/2024-08-10-231502_positions/: down.sql  up.sql
migrations/2024-08-10-231727_candidates/: up.sql
migrations/2024-08-10-231957_votes/: up.sql
migrations/2024-08-10-233600_results/: up.sql
migrations/2024-08-14-105538_quizzes/: down.sql  up.sql
migrations/2024-08-14-105655_questions/: up.sql
migrations/2024-08-14-105800_answers/: up.sql
migrations/2024-08-14-105930_user_answers/: down.sql  up.sql
migrations/2024-08-14-110015_results/: up.sql
src/: main.rs  schema.rs
src/controllers/: answers.rs  candidates.rs  mod.rs  questions.rs  quizzes.rs  results.rs  user_answers.rs  users.rs
src/db_operations/: answers.rs  candidates.rs  db.rs  mod.rs  positions.rs  questions.rs  quizzes.rs  results.rs  user_answers.rs  users.rs  votes.rs
src/models/: answer.rs  app_state.rs  candidates.rs  mod.rs  positions.rs  question.rs  quiz.rs  result.rs  user_answer.rs  users.rs  votes.rs
(+1 files in other folders)
