[package]
name = "tfhe_voting_system"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"]}
actix-web="4.8.0"
bcrypt = "0.15.1"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0"
actix-cors = "0.6"