[package]
name = "tfhe_quiz"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"]}
actix-web="4.8.0"
bcrypt = "0.15.1"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
base64 = "0.22.1"
tfhe = { version = "0.7.2", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }

[profile.dev]
opt-level = 1